[package]
name = "bachelor"
version = "0.0.2"
edition = "2024"
description = "Pure single-threaded utilities optimized for thread-per-core executors"
license = "MIT OR Apache-2.0"
keywords = ["thread-per-core", "single-thread", "async", "compio"]
categories = ["data-structures", "concurrency"]
repository = "https://github.com/wpbrown/bachelor"
readme = "README.md"

[dependencies]